--- a/SDA.css
+++ b/SDA.css
@@ -7,6 +7,7 @@
   margin: 0;
 padding: 0;
 
+
   
 }
 
@@ -225,6 +226,7 @@ font-weight: 500;
 .imgholder img {
   
   min-width: 100%;
+  max-width: 100vw;
   margin: auto;
   z-index: -9;
 }
