--- a/SDA.css
+++ b/SDA.css
@@ -225,7 +225,7 @@ font-weight: 500;
 
 .imgholder img {
   
-  min-width: 100%;
+  min-width: 100vw;
   max-width: 100vw;
   margin: auto;
   z-index: -9;
