--- a/SDA.css
+++ b/SDA.css
@@ -12,7 +12,8 @@ padding: 0;
 }
 
 body {
-  background: #F1F2EB;
+  /* background: #F1F2EB; */
+  background-color: #f3e7cf;
   font-family: "Quicksand", sans-serif;
   overflow-x: hidden;
   
@@ -29,7 +30,10 @@ header {
   background:#0D2C54;
   color: #ebebd3;
   padding: 1em 0;
-  position: relative;
+  position: sticky;
+  top: 0px;
+  z-index: 29;
+  border-bottom:solid #F1F2EB  2.1px;
 }
 
 header::after {
@@ -39,10 +43,11 @@ header::after {
 }
 
 footer { 
-  background-color: #464655;
+  background-color: #d7c9af;
+  /* #464655 */
   padding: 20px 5px 20px 5px;
   margin: 10px 0 2px 0;
-
+  
 
 }
 
@@ -74,7 +79,7 @@ ul {
   text-transform: capitalize;
   margin-bottom: 20px;
   position: relative;
-  color: #F1F2EB;
+  color: black;
   text-transform: capitalize;
   font-size: large;
  
@@ -101,7 +106,7 @@ ul {
 .footer-col ul li a{
   text-decoration: none;
   font-weight: 300;
-  color: #F1F2EB;
+  color: black;
   transition: all 0.3s ease;
   display: block;
   
@@ -123,7 +128,7 @@ ul {
 
 footer h3 {
   text-align: center;
-  color: #2176FF;
+  color: black;
   font-weight: 300;
   text-transform: capitalize;
   font-size: 1.5rem;
@@ -141,17 +146,20 @@ footer h3 {
 .pt-two {
   margin-top: 20px;
   margin-bottom: 20px;
+  display: block;
 }
 
 .pt-two h1 { 
-  background-color: #F1F2EB;
-  color: #0D2C54;
+  background-color: #f3e7cf;
+  color: #ffff;
   max-width:300px;
+ font-style: oblique;
   text-align: center;
   position: relative;
   margin-bottom: 15px;
 text-transform: capitalize;  
-font-weight: 500;
+ font-weight: 600; 
+text-shadow: #767b87 1px 1px 5px;
   margin-left: 5px;
   border: #0D2C54 2px solid;
   border-width: 2px 0px 2px 0px;
@@ -177,7 +185,7 @@ font-weight: 500;
     width: 0;
     height: 0;
     border-top:20px solid transparent;
-    border-left:20px solid #F1F2EB;
+    border-left:20px solid #f3e7cf;
     border-bottom: 20px solid transparent;
 
     
@@ -227,6 +235,7 @@ font-weight: 500;
   
   min-width: 100vw;
   max-width: 100vw;
+  min-height: 400px;
   margin: auto;
   z-index: -9;
 }
@@ -312,13 +321,71 @@ body > h1 {
   text-align: center;
   margin-bottom: 35px;
   margin-top: 40px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 200;
   position: relative;
   
 }
 
+
+.pttwotwo h1 {
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 35px;
+  margin-top: 40px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 200;
+  position: relative;
+  
+}
+
+
+/* 
 .pttwotwo h2::after {
+  content: '';
+  position: absolute;
+  left: 0PX;
+  bottom: -8px;
+  background-color: #2176FF;
+  height: 3px;
+  width: 100%;
+  box-sizing: border-box;
+
+} */
+
+/* .pttwotwo h2::before {
+  content: '';
+  position: absolute;
+  left: -30PX;
+  top: 0px;
+  background-color: #2176FF;
+  display: block;
+  width: 10.5px;
+  height: 15px;
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; */
+  /* height: 30px;
+  width: 30px;
+  box-sizing: border-box; 
+
+
+  
+} */
+
+.pttwotwo h1 {
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 35px;
+  margin-top: 40px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 200;
+  position: relative;
+  display: flex;
+  font-size: 1.6rem;
+
+  
+}
+
+.pttwotwo h1::after {
   content: '';
   position: absolute;
   left: 0PX;
@@ -330,7 +397,7 @@ body > h1 {
 
 }
 
-.pttwotwo h2::before {
+.pttwotwo h1::before {
   content: '';
   position: absolute;
   left: -30PX;
@@ -344,24 +411,434 @@ body > h1 {
   width: 30px;
   box-sizing: border-box; */
 
+
+  
+}
+
+
+.pttwotwo img {
+
+   position: relative;
+   right: -180px; 
+   bottom: -10px;
+ 
+  justify-self:flex-end;
+
+ 
+  
+  /* bottom:32%; */
+}
+
+.stickbar {
+
+  /* position:sticky; */
+  top: 0px;
+  /* z-index: 29; */
+  /* display: flex; */
+  background-color: #0D2C54;
+  
+  /* flex-direction:row;
+  align-content: flex-start;
+  justify-content: space-between; */
+
+
+}
+
+
+.stickbar > h1 {
+  background-color: #0D2C54;
+  padding: 5px;
+  color: #F1F2EB ;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 200;
+  margin-left: 0;
+  margin-top: 5px;
+}
+
+
+.into-boxes {
+
+ /* background-color: #136dff; */
+ display: flex;
+ /* align-items: flex-start;
+ justify-content: space-between;
+ flex-direction: row;  */
+ /* grid-template-columns: 30% 40% 30%; */
+ max-width: 100%;
+ justify-content: space-evenly;
+ justify-items: center;
+ margin-left:5px ;
+ margin-right:5px ;
+ padding: 5px;
+ /* background-color: #2176FF; */
+/* overflow: auto; */
+}
+
+.to-box {
+
+   background-color: #f3e7cf; 
+  margin-left: 2px;
+  margin-right: 2px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 38%; 
+  animation: "upnd", 5s, ease, 0s, infinite, alternate, none;
+  z-index: 28;
+
+}
+
+
+.to-box img {
+
+/* max-width:fit-content;
+position: sticky;
+top: 20%; */
+display: block;
+margin-left: auto;
+margin-right: auto;
+max-width: 50%;
+transition: 2.7s;
+animation: upnd;
+  animation-duration:4s ;
+  animation-direction: alternate-reverse;
+  animation-iteration-count: infinite;
+  z-index: 90;
+
+}
+
+.to-box img:hover {
+
+/* min-width: 80%; */
+opacity: .5;
+cursor: zoom-in;
+}
+
+
+ /* .to-box img:active {
+
+  width: 100vw;
+  position: fixed;
+  left: 1px;
+  top: 1px;
+  animation-duration: 0s;
+  opacity: 1;
+  align-self: center;
+  justify-content: center;
+}  */
+
+
+
+.to-box h3 {
+  font-family: 'Times New Roman', Times, serif;
+  margin: 8px;
+}
+
+.to-box-right h3 {
+  font-family: 'Times New Roman', Times, serif;
+  margin-top:3px ;
+  margin-bottom: 3px;
+  text-align: center;
+}
+
+.to-box-right h4 {
+  font-family: 'Times New Roman', Times, serif;
+  margin-top:4px ;
+  margin-bottom: 4px;
+  
+}
+
+.to-box-right {
+
+  background-color: #f3e7cf; 
+ margin-left: 2px;
+ margin-right: 2px;
+ padding: 8px;
+ display: flex;
+ border: solid #e9f2f6 3px;
+ flex-direction: column;
+overflow: hidden;
+ width: 28%;
+ text-align: left;
+ transition: 3s;
+ 
+ 
+}
+
+
+
+.to-box-left {
+
+  background-color: #f3e7cf; 
+ margin-left: 2px;
+ margin-right: 2px;
+ padding: 8px;
+ display: flex;
+ flex-direction: column;
+overflow: hidden;
+ width: 28%;
+ text-align: left;
+ 
+ 
+}
+
+.to-box-left h3 {
+
+  margin: 8px;
+
+
+}
+
+
+.to-box-left  p {
+
+min-width: 100px;
+background-color: #2176FF;
+}
+
+
+#map {
+height: 100%;
+
+
+}
+
+.wordscroll {
+
+ overflow:scroll;
+ width:60% ;
+max-height: 400px;
+border-left: solid white 3px;
+border-right: solid white 3px;
+padding: 4px;
+}
+
+input[type=checkbox] {
+
+  display: none;
+}
+
+input[type=checkbox]:checked ~ label > img {
+  transform: scale(2.6);
+  animation: none;
+  z-index: 200;
+  opacity: 1;
+  cursor: zoom-out;
+  border: solid white 1.7px;
+  border-radius: 50%;
+  background-color: #ddcfc5;
+  box-shadow: #2176ff 0px 0px 9px;
+}
+
+
+.wordscroll p {
+
+  box-shadow: #5f6874 0px 0px 5px;
+  /* background-color: #f9efda; */
+}
+
+.wordscroll h3 { 
+
+align-self: center;
+text-align: center;
+
+
 }
 
 .bodystyle {
 
    display: flex;
-  align-items: center;
- 
+  align-items: flex-start;
+  justify-content: space-between;
   max-width: 100%;
   margin-bottom: 30px;
-  margin-left: 5px;
+  margin-left: 8px;
   margin-right: 5px;
-  flex-direction: column;
+  flex-direction: row;
+  margin-top: 10px;
   
+}
+
+.words  {
+
+text-align: left;
+/* background-color: brown; */
+display: flex;
+flex-direction: row;
+align-items:flex-start;
+justify-content: space-evenly;
+padding: 8px;
+margin-bottom: 20px;
+}
+
+.words p {
+/* max-width: 40%;  */
+margin-top: 20px;
+
+}
+
+.words  img {
+max-width: 40%;
+
+
+}
+
+
+
+.wordsbox {
+
+max-width: 40%;
+
+
+
+}
+
+.wordsbox h2 {
+
+
+  font-size: 1.5em;
+
+}
+
+
+
+.servicesbox {
+  /* background-color: cyan; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: #ffff, solid, 20px 0px 10px 0px; */
+  border-left: solid #ffff 3px;
+  border-right: solid #ffff 3px;
+  border-radius: 1.5%;
+  width: 28%;
+  padding: 8px;
+  z-index: 3;
+  position: relative;
+  overflow: hidden;
+  transition: .8s;
+  
+
+}
+
+.servicesbox p {
+
+  min-width: 100%;
+  font-size: 1rem;
+  margin-bottom:10px ;
+  margin-top: 10px;
+  
+}
+
+.servicesbox a {
+
+border: solid  #2176FF;
+background-color: #827f7d;
+color: #F1F2EB;
+border-radius: 0%;
+padding: 4px;
+transition: .4s;
+font-size: .8em;
+min-width: 100% ; 
+z-index: 2;
+text-align: center;
+
+
+}
+
+.servicesbox a:hover {
+
+  color: #ffffff;
+  background-color: #2176FF;
+  font-size: .82rem;
+  border: outset #5f6874;
+ }
+
+ .servicesbox a:active {
+
+  background-color: white;
+  color: #0D2C54;
+
+ }
+
+
+
+
+
+.servicesbox:hover > .shine { 
+
+opacity: .4;
+
+}
+
+.servicesbox:hover > h2 {
+
+background-color: #fffaef;
+
+ }
+
+.servicesbox:hover {
+
+  box-shadow: #a4c5fb -1px 3px 5px ;
+  background-color: #fffaef;
+}
+
+
+.to-box-right:hover {
+
+  box-shadow: #a4c5fb -1px 3px 5px ;
+  background-color: #fffaef;
+}
+
+
+.shine { 
+  
+  width: 100%;
+  position: absolute;
+  height: 6px;
+  background-color: white;
+  animation-name: grumby;
+  animation-duration: 3.8s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+  animation-direction:normal;
+  animation-timing-function: ease-in;
+  box-shadow: #ffff 0 0 18px;
+  z-index: 1;
+  opacity: 0;
+  transition: .8s;
+
+
+}
+
+
+
+.servicesbox h2 {
+
+  background-color:#f3e7cf;
+  padding: 7px;
+  /* border-top: 2px solid #ffffff ; */
+  border-bottom: 2px solid #ffffff ;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  transition: .8s;
+   transition-timing-function:cubic-bezier(0.20, .60, 1, 1) ;
+  transition-delay: .6s;
+
 }
 
 .bodystyle img {
   margin: 0px;
-  border:#2176FF 3px solid ;
+  margin-right: 10px;
+  border: inset 3px grey;
+  /* position: sticky; */
+  bottom:3px;
+  left: 2px;
+  width: 50%;
+  min-width: 400px;
 }
 .bodystyle p {
   display:block;
@@ -384,7 +861,10 @@ body > h1 {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 6px;
+  margin: 3px 3px 20px 5px;
+  background-color: #0D2C54;
+  color: #ffff;
+  border-bottom: #2176FF solid 6px;
 }
 
 footer h3 {
@@ -403,6 +883,11 @@ footer h3 {
   margin: 2px;
   overflow: scroll;
   
+}
+
+.column p {
+
+  text-align: left;
 }
 
 .now {
@@ -461,7 +946,8 @@ width: 77%;
 
 .middlesection main {
   /* background-color: #132A13; */
-  width: 65%;
+  /* width:65%; */
+  width: 100%;
   align-self: center;
   
   border: #2176FF 5px;
@@ -473,28 +959,48 @@ width: 77%;
   left: 18%; */
 
   padding: 4px;
+  transition: 1s;
 }
 
 .middlesection > main  img {
 
-  max-width: 100%;
-  border: #2176FF solid 3px;
+  max-width: 80%;
+  /* border: #2176FF solid 3px; */
   justify-self: center;
+  transition:  1s;
+  
+  
 
+}
+
+
+.middlesection > main img:hover {
+
+  min-width: 82%;
+
+  background-image: radial-gradient(circle, blue 40%, cyan 60% rgb(200, 36, 36) 100%);
 }
 
 .middlesection aside {
   /* background-color: #0D2C54; */
   width: 25%;
   float: right;
-  
-  
   padding: 4px;
   margin-right: 20px;
   text-align: left;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.holdem {
+
+display: flex;
+justify-content: space-between;
+/* background-color: #2176ff; */
+width:100%;
+margin-bottom: 20px;
+
 }
 
 .theretis {
@@ -613,7 +1119,7 @@ aside img {
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
-  border: #0D2C54 4px solid;
+  border: #0D2C54 0 solid;
   display: inline-grid;
 }
 
@@ -622,6 +1128,8 @@ aside img {
   align-items: center;
   justify-content: center;
   position: relative;
+  transition: ease-in .4s;
+  box-shadow: #2176ff 0 0 3px;
  
   /* width: 100%;
   grid-column-start: 1;
@@ -631,23 +1139,80 @@ aside img {
 
 .item2 p, .item4 p, .item6 p {
 
-font-size: 20px ;
+font-size: 1.2rem ;
 margin-bottom: 30px;
+margin-left: 6px;
+text-align: left;
 
 }
 
+.item2, .item4, .item6 {
+transition: ease-in .74s;
+padding: 4px;
+position: relative;
+overflow: hidden;
+
+
+}
+
+
 .item2 h3, .item4 h3, .item6 h3 {
 
-  font-size: 30px ;
+  font-size: 1.5rem ;
   margin-bottom: 20px;
-  
+  font-family:Georgia, serif;
   
   }
 
 
+.item2:hover > .lookhere {
+
+opacity: .045;
+
+}
+
+.item4:hover > .lookhere {
+
+  opacity: .04;
+  
+  }
+
+  .item6:hover > .lookhere {
+
+    opacity: .04;
+    
+    }
+    
+
+
+.lookhere {
+
+  height: 600px;
+  width: 10px;
+  background-color:#136dff;
+  
+  position: absolute;
+  right: 2px;
+  top: 0px;
+  z-index: 20;
+  animation: lookie 4s;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction:normal;
+  opacity: 0;
+  box-shadow:0px 0px 10px #2176FF;
+  transition: .6s;
+}
+
+
+
+
 .picholder {
-  width: 100px;
-  height: 100px;
+  width: 12vh;
+  height: 12vh;
+  min-width: 80px;
+  min-height: 80px;
+  /* height: 100px; */
   border-radius: 50%;
   background-color: #2176ff;
   position: absolute;
@@ -655,12 +1220,35 @@ margin-bottom: 30px;
   left: 23%; */
   justify-self: center;
   overflow: hidden;
+  transition: ease-in-out, .4s ;
+}
+
+.picholder img {
+  width:100%;
+  overflow: hidden;
+  transition: .2s;
+  background-color: white;
+  
+}
+
+.picholder img:active {
+  opacity: 0;
+}
+
+
+.picholder:hover { 
+   width: 13vh ; 
+   min-width: 90px;
+   height: 13vh;
+   min-height: 90px;
+   box-shadow: #2176FF 0 0 3px;
+   
 }
 
 .item1 p {
   position: absolute;
   bottom: 9%;
-  
+  font-size: 1.2rem;
   justify-self: center;
 }
 
@@ -674,18 +1262,53 @@ h1 > img {
   position: absolute;
   bottom: 9%;
   justify-self: center;
+  font-size: 1.2rem;
 }
+
+.item3:hover ~ .item4 {
+box-shadow:  #2176ff 0 0 5px;
+
+}
+
+.item3:hover  {
+  border: none;
+  background-color: #ffff;
+  box-shadow:  #cdbaae 0 3px 6px;
+  
+  }
+
+.item1:hover {
+  border: none;
+  background-color: #ffff;
+  box-shadow:  #cdbaae 0 3px 6px;
+  
+  }
+
+  .item1:hover ~ .item2 {
+    box-shadow:  #2176ff 0 0 5px;
+    
+    }
+
+  .item5:hover {
+    border: none;
+    background-color: #ffff;
+    box-shadow:  #cdbaae 0 3px 6px;
+    
+    }
+
+    .item5:hover ~ .item6 {
+      box-shadow:  #2176ff 0 0 5px;
+      
+      }
+
 
 .item5 p {
   position: absolute;
   bottom: 9%;
   justify-self: center;
+  font-size: 1.2rem;
 }
 
-.picholder img {
-  width:100%;
-  overflow: hidden;
-}
 
 main h3 {
   margin-bottom: 10px;
@@ -724,6 +1347,57 @@ main h3 {
   display: none;
 }
 
+/* Services Page CSS*/
+
+
+.bolumn {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+  text-align: center;
+  font-size: 25px;
+  cursor: pointer;
+  color: white;
+}
+
+.bolumnThree {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+  text-align: center;
+  font-size: 25px;
+  cursor: pointer;
+  color: rgb(37, 37, 37);
+}
+
+
+.containerTab {
+  padding: 20px;
+  color: white;
+}
+.containerTabThree {
+  padding: 20px;
+  color: rgb(46, 46, 46);
+}
+
+/* Clear floats after the columns */
+.sow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Closable button inside the image */
+.closebtn {
+  float: right;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+
+
+/* Services Page CSS*/
+
 @keyframes clipPathCircleOpen {
   0% { clip-path: circle(0% at top right); }
   100% { clip-path: circle(250% at top right); }
@@ -733,6 +1407,30 @@ main h3 {
   100% { clip-path: circle(0% at top right); }
 }
 
+
+@keyframes grumby {
+  from {translate: 0 -20px;}
+  to {translate: 0 500px;}
+  }
+
+@keyframes lookie {
+
+from {translate: 0px 0px;}
+to {translate: -900px 0px; }
+
+
+
+
+
+}
+
+@keyframes upnd {
+
+  from {translate: 0 0px;}
+  to {translate: 0 20px;}
+
+
+}
 .site-nav li {
   border-bottom: 1px solid #575766;
   z-index: 2;
@@ -828,11 +1526,117 @@ main h3 {
 
 .nice {
   height:20rem;
-  background-color: #4b8ffc;
+  /* background-color: #4b8ffc; */
   position: relative;
   margin-bottom: 30px;
 
 }
+
+
+
+/* team sect */
+
+.bigholder {
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  
+  
+
+
+
+}
+
+.vidholder {
+
+position: relative;
+min-height:200px ;
+display: flex;
+/* align-items: center; */
+justify-content: space-between;
+overflow: hidden;
+min-width: 100%;
+margin: 5px;
+/* background-color: #136dff; */
+padding: 5px;
+box-shadow: #9a9c9f 3px 3px 3px;
+border-top: white solid 1px;
+border-bottom: white solid 1px;
+transition: .5s ease-in-out;
+}
+
+
+.vidholder:hover {
+
+  box-shadow: #5f6874 4px 4px 9px;
+  
+}
+
+
+.vidholder img {
+
+  border-radius: 50%;
+  z-index: 2;
+  opacity: 1;
+  transition: .5s ease-in-out;
+
+}
+
+
+.vidholder img:hover {
+
+  border-radius: 0%;
+  border: #2176FF solid 1px;
+  
+}
+
+.asidecontact {
+
+text-align: center;
+z-index: 2;
+
+
+
+}
+
+#bgi { 
+
+z-index: 1;
+border-radius: 0%;
+opacity: .06;
+position: absolute;
+justify-self: center;
+min-width: 100%;
+
+
+}
+
+
+#bgaka { 
+
+  z-index: 1;
+  border-radius: 0%;
+  opacity: .2;
+  position: absolute;
+  justify-self: center;
+  min-width: 100%;
+  
+  
+  }
+
+#bgii { 
+
+  z-index: 1;
+  border-radius: 0%;
+  opacity: .64;
+  position: absolute;
+  justify-self: center;
+  min-width: 100%;
+  max-height: 500px;
+  
+  
+  }
 
 #email{ 
   margin-bottom: 50px;
@@ -847,7 +1651,7 @@ main h3 {
   position: absolute;
   width: 50%;
   top: 9px;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: underline white 2px;
 }
 
@@ -863,7 +1667,7 @@ main h3 {
 #namezL {
 
   position: absolute;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: underline white 2px;
   top: 65px;
   width: 50%;
@@ -884,7 +1688,7 @@ width: 50%;
 #numberL {
 
   position: absolute;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: underline white 2px;
   top: 130px;
   width: 50%;
@@ -906,7 +1710,7 @@ height: 80px;
 #info {
 
   position: absolute;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: underline white 2px;
 top: 180px;
 width: 70%;
